; ModuleID = '/home/carl/AnghaBench/linux/arch/sparc/prom/extr_tree_64.c_prom_node_to_node.c'
source_filename = "/home/carl/AnghaBench/linux/arch/sparc/prom/extr_tree_64.c_prom_node_to_node.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*, i64)* @prom_node_to_node to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @prom_node_to_node(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca [5 x i64], align 16
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = ptrtoint i8* %6 to i64
  %8 = getelementptr inbounds [5 x i64], [5 x i64]* %5, i64 0, i64 0
  store i64 %7, i64* %8, align 16
  %9 = getelementptr inbounds [5 x i64], [5 x i64]* %5, i64 0, i64 1
  store i64 1, i64* %9, align 8
  %10 = getelementptr inbounds [5 x i64], [5 x i64]* %5, i64 0, i64 2
  store i64 1, i64* %10, align 16
  %11 = load i64, i64* %4, align 8
  %12 = trunc i64 %11 to i32
  %13 = zext i32 %12 to i64
  %14 = getelementptr inbounds [5 x i64], [5 x i64]* %5, i64 0, i64 3
  store i64 %13, i64* %14, align 8
  %15 = getelementptr inbounds [5 x i64], [5 x i64]* %5, i64 0, i64 4
  store i64 -1, i64* %15, align 16
  %16 = getelementptr inbounds [5 x i64], [5 x i64]* %5, i64 0, i64 0
  %17 = call i32 @p1275_cmd_direct(i64* %16)
  %18 = getelementptr inbounds [5 x i64], [5 x i64]* %5, i64 0, i64 4
  %19 = load i64, i64* %18, align 16
  ret i64 %19
}

declare dso_local i32 @p1275_cmd_direct(i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
